--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,31 @@ server:
 spring:
   application:
     name: fihws-spring-boot-starter
+  rabbitmq:
+    host: 47.96.75.125
+    port: 5672
+    username: admin
+    password: fih-foxconn123!@#
+    #开启发送失败返回
+    publisher-returns: true
+    #开启发送确认
+    publisher-confirms: true
+    listener:
+      simple:
+        #指定最小的消费者数量.
+        concurrency: 2
+        #指定最大的消费者数量.
+        max-concurrency: 2
+        #开启ack
+        acknowledge-mode: auto
+        #开启ack
+      direct:
+        acknowledge-mode: auto
+     #支持消息的确认与返回
+    template:
+      mandatory: true
+
+push.config.queue: queue_push1
 
 
 logging:
